--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lm</title>
 </head>
 <body>
-    
+
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, repellat? Dolores laborum repellendus iure voluptate possimus voluptates est harum, veritatis eos. Quisquam, nobis sapiente. Explicabo modi praesentium voluptate quidem libero.</h2>
 </body>
 </html>
